Updating project's java version to 16